--- a/6_curriculum_vitae.css
+++ b/6_curriculum_vitae.css
@@ -2,42 +2,31 @@
 	height: 40px;
 }
 
-.curriculum_vitae_manage {
+.img_profile {
 	float:left;
-	margin: 40px;
+	margin: 60px;
 }
 
-.curriculum_vitae_name {
-	text-align: right;
-	padding: 10px;
-	padding-left: 100px;
-	font-size: 18px;
-}
-
-.curriculum_vitae_text_area {
-	float:left;
-	padding: 10px;
-}
-
-.curriculum_vitae_text {
+.tbl1 input {
 	width: 300px;
 	height: 20px;
 	background: white;
 	border: 10px blue;
 }
 
-.curriculum_vitae_button {
+.txt_field {
+	text-align: right;
+	padding: 10px;
+	padding-left: 100px;
+	font-size: 15px;
+}
+
+.btn_save {
 	clear: left;
 	width: 150px;
 	height: 30px;
-	background-color: blue;
-	color: white;
-	border: 0px;
 	font-size: 15px;
-	text-align:-moz-center; /*FF*/
-	text-align:center; /*IE*/
-	border-spacing: 0px;
-	border-style: none;
+	margin-left: 550px;
 	padding: 0px;
 
 }
