--- a/7_category.css
+++ b/7_category.css
@@ -1,34 +1,28 @@
-.category_manage {
+
+.img_category {
 	float:left;
 	margin: 40px;
 }
+.tbl1 { width: 700px; }
 
-.category_name {
-	text-align: right;
-	padding: 10px;
-	padding-left: 100px;
-	font-size: 18px;
-}
-
-.category_text_area {
-	float:left;
-	padding: 10px;
-}
-
-.category_text {
+.txtbox1 {
 	width: 300px;
 	height: 20px;
 	background: white;
-	border: 10px blue;
 }
 
-.category_button {
+.txt_field {
+	text-align: right;
+	padding: 10px;
+	font-size: 18px;
+}
+.txt_chkbox_field {
+	font-size: 10px;
+}
+.btn_save {
 	clear: left;
 	width: 150px;
 	height: 30px;
-	background-color: blue;
-	color: white;
-	border: 0px;
 	font-size: 15px;
 	text-align:-moz-center; /*FF*/
 	text-align:center; /*IE*/
@@ -38,7 +32,7 @@
 
 }
 
-.category_checkbox {
+.chkbox1 {
 	width: 20px;
 	height: 20px;
 	background-color: white;
