--- a/layout3.css
+++ b/layout3.css
@@ -1,53 +1,24 @@
-body {
- margin: 0px; <!-- 언제나 전체 body에는 margin 값을 0으로 세팅해준다-->
- font-size: 18px;
- color: black;
+body,div,ul,li,dl,dt,dd,ol,p,h1,h2,h3,h4,h5,h6,form {margin:0; padding:0}
+body {font:normal datum, '돋움';}
+ul,ol,dl {list-style:none}
+img {border:0; vertical-align:top;}
+ul {list-style:none; padding:0; margin:0;}
+
+#wrap { margin:0 auto; width:1000px; }
+#header { float:left; width:1000px; height:100px; margin-bottom:15px; }
+#contents { float:left; width:1000px; }
+#footer { float:left; width:1000px; margin-top:20px; }
+
+
+
+#txtbox1 {
+	!important
+	border-color: blue;
+	background: #E0F8F7;
 }
-#container {
- position: relative;
- height: auto;
- width: 1000px;
- margin: auto; <!-- 레이아웃을 싸고 있는 box의 margin을 auto로 주면 중앙정렬 효과-->
- background-color: #F90;
-}
-#header {
- background-color: #333;
- height: 100px;
- width: 1000px;
- position: relative;
- display:table;
-}
-#left {
- background-color: #09C;
- float: left;
- height: 400px;
- width: 90px;
- position: relative;
- padding:5px;
- font-size: 11px;
-}
-#right {
- background-color: #09C;
- float: right;
- height: 400px;
- width: 200px;
- position: relative;
- padding:5px;
- font-size: 11px;
-}
-#main {
- background-color: #3C0;
- float: left;
- min-height: 400px;
- width: 660px;
- position: relative;
- padding: 15px;
-}
-#footer {
- background-color: #C0F;
- height: 50px;
- width: 1000px;
- position: relative;
- clear: both; <!-- 상단의 흐름을 한번 끊어주기 위해 clear를 해준다.. -.-;;?? -->
- float: left; <!-- 새로운 흐름을 지정해줘야 깨지지 않는다-->
+
+#btn_purple {
+	background: purple;
+	color: white;
+	border: none;
 }
