--- a/11_com_signin_complete.css
+++ b/11_com_signin_complete.css
@@ -1,34 +1,39 @@
-.com_signin_complete_table {
-	padding-left: 30px;
-	float:left;
-}
 
-.com_signin_complete_table td {
-	height: 40px;
+.txt_welcome {
 	text-align: center;
 }
 
-.com_signin_complete_result {
-	padding: 20px;
+.ul_txt {
+	text-align: center;
+	list-style: circle;
 }
 
-.com_signin_complete_image{
+.img_travel {
 	float:left;
-	padding: 40px;
+	margin: 80px;
 }
 
-.com_signin_complete_name {
-	font-size: 15px;
+
+.tbl1 {
+	width: 500px;
+	height: 200px;
 }
-.com_signin_complete_value {
+
+.txt_result_field {
+	text-align: center;
+	font-size: 10px;
+}
+.txt_result_value {
 	font-size: 20px;
 }
-.com_signin_complete_button {
-	clear: both;
+
+.bottom {
 	text-align: center;
 }
-.com_signin_complete_button input{
-	width: 100px;
+
+.btn_bottom {
+	clear: both;
+	width: 150px;
 	height: 40px;
 	background-color: blue;
 	color: yellow;
