--- a/12_com_primary_info.css
+++ b/12_com_primary_info.css
@@ -1,38 +1,43 @@
-.com_primary_info_table td {
-	height: 40px;
+.div_profile, .div_password {
+	height: 200px;
 }
 
-.com_primary_info_profile, .com_primary_info_password {
-	float:left;
-	margin: 40px;
+.tbl1 {
+	display: inline-block;
+	margin: 20px;
 }
 
-.com_primary_info_name {
+.tbl1 td {
+	height: 30px;
+}
+
+.img_profile, .img_password {
+	width: 150px;
+	height: 150px;
+	margin: 30px 80px;
+}
+
+.txt_field {
 	text-align: right;
 	padding: 10px;
 	font-size: 18px;
 }
 
-hr {
-	clear:both;
-}
 
-.com_primary_info_text_area {
+.primary_info_text_area {
 	float:left;
 	padding: 10px;
 }
 
-.com_primary_info_text {
+.txtbox1 {
 	width: 200px;
 	height: 25px;
 	background-color: white;
 	border: thick blue;
 }
 
-.com_primary_info_button {
+.btn_save, .btn_upload {
 	width: 60px;
 	height: 20px;
-	background-color: blue;
-	color: white;
-	border: 0px;
+	margin-left: 20px;
 }
