--- a/14_com_profile.css
+++ b/14_com_profile.css
@@ -1,46 +1,32 @@
-.com_profile_manage {
+.curriculum_vitae_table td {
+	height: 40px;
+}
+
+.img_profile {
 	float:left;
-	margin: 40px;
+	margin: 60px;
 }
 
-.com_profile_name {
-	text-align: right;
-	padding: 10px;
-	padding-left: 100px;
-	font-size: 18px;
-}
-
-.com_profile_text_area {
-	float:left;
-	padding: 10px;
-}
-
-.com_profile_text {
+.tbl1 input {
 	width: 300px;
 	height: 20px;
 	background: white;
 	border: 10px blue;
 }
 
-
-.com_profile_button {
-	clear: left;
-	text-align: center;
-
-}
-
-
-.com_profile_button input{
-	width: 150px;
-	height: 30px;
-	background-color: blue;
-	color: white;
-	border: 0px;
+.txt_field {
+	text-align: right;
+	padding: 10px;
+	padding-left: 100px;
 	font-size: 15px;
 }
 
-.com_profile_checkbox {
-	width: 20px;
-	height: 20px;
-	background-color: white;
+.btn_save {
+	clear: left;
+	width: 150px;
+	height: 30px;
+	font-size: 15px;
+	margin-left: 550px;
+	padding: 0px;
+
 }
