--- a/19_find_friend_search.css
+++ b/19_find_friend_search.css
@@ -1,30 +1,36 @@
-.login_email {
+.tbl2 {
+	margin-left: 80px;
+	width: 90%;
+}
+
+.txtbox_email {
 	width: 120px;
 	height: 30px;
-	background-color: white;
 }
-.login_password {
+.txtbox_password {
 	width: 120px;
 	height: 30px;
-	background-color: white;
 }
-.friend_searchbar {
+.contents_searchbar {
 	text-align: center;
 	margin: 0 auto;
-	width: 300px;
+	width: 90%;
 	height: 30px;
 	border: 2px;
 	border-color: blue;
 }
-.friend_ask_to_join {
-	width: 110px;
-	height: 30px;
-	background-color: green;
-	color: white;
+.txt_name {
+	font-size: 12px;
 }
-.friend_delete {
+.btn_search {
+	width: 100px;
+	height: 30px;
+}
+.btn_asktojoin {
 	width: 110px;
 	height: 30px;
-	background-color: blue;
-	color: white;
+}
+.btn_delete {
+	width: 110px;
+	height: 30px;
 }
