--- a/header.css
+++ b/header.css
@@ -1,10 +1,12 @@
-#title {
+
+/* header.html 스타일정의 */
+.title {
  	float:left;
  	margin-top: 20px;
  	padding: 10px;
 }
 
-#login {
+.login {
  	display:inline-block;
  	margin-left: 50px;
  	height: 80px;
@@ -21,7 +23,7 @@
 	border-radius: 2px;
 }
 
-#login_window {
+.login_window {
 	float: right;
 	display: table-cell;
 	vertical-align: middle;
@@ -31,6 +33,42 @@
 	background-color: purple;
 	font-size: 15px;
 	color: white;
+}
+
+/* header2.html 스타일정의 */
+
+.title2 {
+ 	float:left;
+}
+
+.searchbar2 {
+	float:left;
+	width: 250px;
+	height: 30px;
+	margin-left: 20px;
+	margin-top: 30px;
+	border: 2px;
+	border-color: blue;
+}
+
+.login_window2 {
+	float: right;
+	line-height: 35px;
+	width: 230px;
+	height: 70px;
+	margin-right: 10px; 
+	margin-bottom: 10px;
+	background-color: purple;
+	font-size: 15px;
+	color: white;
+	right:0%; 
+    top:40%; 
+    margin-top: 10px; 
+    text-align: center;
+}
+
+#login_window2 p {
+	height: inherit;
 }
 
 
@@ -50,6 +88,9 @@
 .menubar a {
 	text-decoration: none;
 	color: black;
+}
+.menubar_progress {
+	text-align: right;
 }
 
 .menubar2 {
