27번파일 수정

--- a/2_signin.jade
+++ b/2_signin.jade
@@ -5,7 +5,7 @@ head
 		title div 태그
 		link(href='/stylesheets/2_signin.css', rel='stylesheet', type='text/css')
 		link(href='/stylesheets/layout2.css', rel='stylesheet', type='text/css')
-		link(href='header.css ', rel='stylesheet', type='text/css')
+		link(href='/stylesheets/header.css ', rel='stylesheet', type='text/css')
 	body
 		#wrap
 			#header
