27번 파일 수정

--- a/27_create_program.jade
+++ b/27_create_program.jade
@@ -1,110 +1,110 @@
 !!! transitional
 html(xmlns='http://www.w3.org/1999/xhtml')
 head
-    meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
-    title div 태그
-    link(href='layout.css', rel='stylesheet', type='text/css')
-    link(href='27_create_program.css', rel='stylesheet', type='text/css')
-    link(href='header.css', rel='stylesheet', type='text/css')
-  body
-    #wrap
-      #header
-        .title2
-          h2 MICE Star
-          p Organize & Manage your MICE smart!
-        input.searchbar2(type='search', name='search')
-        p.login_window2
-          | Welcome Bobby Kim
-          br
-          | Messages | Settings | Sign Out
-        br
-        br
-        hr(size='2', width='100%')
-        table.menubar2(frame='void')
-          tr
-            td
-              input.menubar2_button(type='button', value='News', style='background-color: red;')
-            td
-              input.menubar2_button(type='button', value='Application', style='background-color: orange;')
-            td
-              input.menubar2_button(type='button', value='Meetings', style='background-color: yellow;')
-            td
-              input.menubar2_button(type='button', value='Incentive', style='background-color: green;')
-            td
-              input.menubar2_button(type='button', value='Convention', style='background-color: green;')
-            td
-              input.menubar2_button(type='button', value='Exhibition', style='background-color: skyblue;')
-            td
-              input.menubar2_button(type='button', value='Festivals', style='background-color: blue;')
-            td
-              input.menubar2_button(type='button', value='Events', style='background-color: purple;')
-            td
-              input.menubar2_button(type='button', value='Travel Operator', style='background-color: yellow;')
-            td
-              input.menubar2_button(type='button', value='Recruiting', style='background-color: blue;')
-            td
-              input.menubar2_button(type='button', value='Destination', style='background-color: red;')
-        hr(size='2', width='100%')
-      #sidebar
-        img.img_profile(src='./image/profile.png')
-        br
-        p.txt_name Bobby S, Kim
-        hr(size='2', width='100px')
-        p.txt_partners Partners&Friends
-      #contents
-        p
-          | partners&Friends
-          | Search
-        hr(size='2', width='600px')
-        h3
-          | STEP 1
-          | Create Event
-        br
-        table.tbl1
-          tr
-            td.txt_field Project Name
-            td
-              input#txtbox2.txtbox1(type='text')
-            td
-              input#btn_green.btn1(type='button', value='Save Draft')
-          tr
-            td.txt_field Description
-            td
-              input#txtbox2.txtbox1(type='text')
-            td
-              input#btn_green.btn1(type='button', value='Save Draft')
-          tr
-            td.txt_field Category
-            td
-              input#txtbox2.txtbox1(type='text')
-            td
-              input#btn_green.btn1(type='button', value='Select')
-          tr
-            td.txt_field Sub Category
-            td
-              input#txtbox2.txtbox1(type='text')
-            td
-              input#btn_green.btn1(type='button', value='Create New')
-          tr
-            td.txt_field Date
-            td
-              input#txtbox2.txtbox2(type='text')
-              input#txtbox2.txtbox3(type='text')
-            td
-              input#btn_green.btn1(type='button', value='Calendar')
-          tr
-            td.txt_field End
-            td
-              input#txtbox2.txtbox2(type='text')
-              input#txtbox2.txtbox3(type='text')
-            td
-              input#btn_green.btn1(type='button', value='Calendar')
-        br
-        input#btn_purple.btn_save(type='button', value='Go to Step')
-      #sidebar_ad
-        p.sidebar_ad_title Note&Direction
-        p.sidebar_ad_content
-          | 1. Input his/her e-mail address & password.
-          br
-          | 2. When click the ‘search’ button, all list of friends or partners name with profile picture in each network will be shown automatically				(see the next page for the search result)
-      #footer
+	meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
+	title div 태그
+	link(href='/stylesheets/layout.css', rel='stylesheet', type='text/css')
+	link(href='/stylesheets/7_create_program.css', rel='stylesheet', type='text/css')
+	link(href='/stylesheets/header.css', rel='stylesheet', type='text/css')
+	body
+		#wrap
+			#header
+				.title2
+					h2 MICE Star
+					p Organize & Manage your MICE smart!
+				input.searchbar2(type='search', name='search')
+				p.login_window2
+					| Welcome Bobby Kim
+					br
+					| Messages | Settings | Sign Out
+				br
+				br
+				hr(size='2', width='100%')
+				table.menubar2(frame='void')
+					tr
+						td
+							input.menubar2_button(type='button', value='News', style='background-color: red;')
+						td
+							input.menubar2_button(type='button', value='Application', style='background-color: orange;')
+						td
+							input.menubar2_button(type='button', value='Meetings', style='background-color: yellow;')
+						td
+							input.menubar2_button(type='button', value='Incentive', style='background-color: green;')
+						td
+							input.menubar2_button(type='button', value='Convention', style='background-color: green;')
+						td
+							input.menubar2_button(type='button', value='Exhibition', style='background-color: skyblue;')
+						td
+							input.menubar2_button(type='button', value='Festivals', style='background-color: blue;')
+						td
+							input.menubar2_button(type='button', value='Events', style='background-color: purple;')
+						td
+							input.menubar2_button(type='button', value='Travel Operator', style='background-color: yellow;')
+						td
+							input.menubar2_button(type='button', value='Recruiting', style='background-color: blue;')
+						td
+							input.menubar2_button(type='button', value='Destination', style='background-color: red;')
+				hr(size='2', width='100%')
+			#sidebar
+				img.img_profile(src='./image/profile.png')
+				br
+				p.txt_name Bobby S, Kim
+				hr(size='2', width='100px')
+				p.txt_partners Partners&Friends
+			#contents
+				p
+					| partners&Friends
+					| Search
+				hr(size='2', width='600px')
+				h3
+					| STEP 1
+					| Create Event
+				br
+				table.tbl1
+					tr
+							td.txt_field Project Name
+							td
+								input#txtbox2.txtbox1(type='text')
+							td
+								input#btn_green.btn1(type='button', value='Save Draft')
+					tr
+							td.txt_field Description
+							td
+								input#txtbox2.txtbox1(type='text')
+							td
+								input#btn_green.btn1(type='button', value='Save Draft')
+					tr
+							td.txt_field Category
+							td
+								input#txtbox2.txtbox1(type='text')
+							td
+								input#btn_green.btn1(type='button', value='Select')
+					tr
+							td.txt_field Sub Category
+							td
+								input#txtbox2.txtbox1(type='text')
+							td
+								input#btn_green.btn1(type='button', value='Create New')
+					tr
+							td.txt_field Date
+							td
+								input#txtbox2.txtbox2(type='text')
+								input#txtbox2.txtbox3(type='text')
+							td
+								input#btn_green.btn1(type='button', value='Calendar')
+					tr
+							td.txt_field End
+							td
+								input#txtbox2.txtbox2(type='text')
+								input#txtbox2.txtbox3(type='text')
+							td
+								input#btn_green.btn1(type='button', value='Calendar')
+				br
+				input#btn_purple.btn_save(type='button', value='Go to Step')
+			#sidebar_ad
+				p.sidebar_ad_title Note&Direction
+				p.sidebar_ad_content
+					| 1. Input his/her e-mail address & password.
+				br
+					| 2. When click the ‘search’ button, all list of friends or partners name with profile picture in each network will be shown automatically				(see the next page for the search result)
+			#footer
